# algo1_tpi_reunionesremotas

./: .gitignore  MOSTRAR REUNIÓN Y MOSTRAR SENIAL  README.md
TPI/CLion/: CMakeLists.txt
TPI/CLion/reunionesRemotas/: CMakeLists.txt  cobertura  main.cpp
TPI/CLion/reunionesRemotas/html/: index-sort-f.html  index-sort-l.html  index.html
TPI/CLion/reunionesRemotas/html/reunionesRemotas/: index-sort-f.html  index-sort-l.html  index.html  main.cpp.func-sort-c.html  main.cpp.func.html  main.cpp.gcov.html
TPI/CLion/reunionesRemotas/html/reunionesRemotas/lib/: gtest.h.func-sort-c.html  gtest.h.func.html  gtest.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
TPI/CLion/reunionesRemotas/html/reunionesRemotas/src/: auxiliares.cpp.func-sort-c.html  auxiliares.cpp.func.html  auxiliares.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  solucion.cpp.func-sort-c.html  solucion.cpp.func.html  solucion.cpp.gcov.html
TPI/CLion/reunionesRemotas/html/reunionesRemotas/tests/: acelerar.cpp.func-sort-c.html  acelerar.cpp.func.html  acelerar.cpp.gcov.html  esReunionValida.cpp.func-sort-c.html  esReunionValida.cpp.func.html  esReunionValida.cpp.gcov.html  esSenial.cpp.func-sort-c.html  esSenial.cpp.func.html  esSenial.cpp.gcov.html  filtradoMediana.cpp.func-sort-c.html  filtradoMediana.cpp.func.html  filtradoMediana.cpp.gcov.html  hablantesSuperpuestos.cpp.func-sort-c.html  hablantesSuperpuestos.cpp.func.html  hablantesSuperpuestos.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  ordenar.cpp.func-sort-c.html  ordenar.cpp.func.html  ordenar.cpp.gcov.html  ralentizar.cpp.func-sort-c.html  ralentizar.cpp.func.html  ralentizar.cpp.gcov.html  reconstruir.cpp.func-sort-c.html  reconstruir.cpp.func.html  reconstruir.cpp.gcov.html  seEnojo.cpp.func-sort-c.html  seEnojo.cpp.func.html  seEnojo.cpp.gcov.html  (+6 more)
TPI/CLion/reunionesRemotas/src/: auxiliares.cpp  auxiliares.h  definiciones.h  solucion.cpp  solucion.h
TPI/CLion/reunionesRemotas/tests/: acelerar.cpp  esReunionValida.cpp  esSenial.cpp  filtradoMediana.cpp  hablantesSuperpuestos.cpp  ordenar.cpp  ralentizar.cpp  reconstruir.cpp  seEnojo.cpp  silencios.cpp
(+130 files in other folders)
